--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 body {
-    font-family: 'Baloo 2', cursive;
-    padding: 20px 60px;
+  font-family: "Baloo 2", cursive;
+  padding: 20px 60px;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
 
-a{
-    text-decoration: none;
-    color: black;
+* {
+  box-sizing: border-box;
 }
